# prints

./: .gitignore  README.md  conventions.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml
docs/: 3d-printing-setup.md
docs/superpowers/plans/: 2026-04-21-misc-3d-printing-repo-and-wizard-figurine.md  2026-04-21-prints-repo-and-wizard-figurine.md
docs/superpowers/specs/: 2026-04-21-harry-figurine-for-wallace-design.md
projects/wizard-figurine-for-wallace/: README.md  candidates.md  print-log.md
projects/wizard-figurine-for-wallace/3d/: base.py  build_all.py
projects/wizard-figurine-for-wallace/downloaded/: SOURCES.md
tests/: test_wizard_figurine_base.py
